update training script to allow for different models to be selected

--- a/docs/sphinx/source/use_cases/cord19_bert_training.ipynb
+++ b/docs/sphinx/source/use_cases/cord19_bert_training.ipynb
@@ -606,7 +606,7 @@
    "source": [
     "from pandas import read_csv\n",
     "\n",
-    "training_data_batch = read_csv(\"cord19/training_data_bert_or_bm25_10_total.csv\")"
+    "training_data_batch = read_csv(\"cord19/20201020_training_data_bert_or_bm25_10_total.csv\")"
    ]
   },
   {
@@ -658,24 +658,24 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>is8tlxja</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SARS-CoV-2: Zoonotic origin of pandemic corona...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>db8j8wxx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SARS-CoV-2: Zoonotic origin of pandemic corona...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>bc8taaw9</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>[Tracing the origins of SARS-COV-2 in coronavi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12dcftwt</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Possible Bat Origin of Severe Acute Respirator...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>kqqantwg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Possible Bat Origin of Severe Acute Respirator...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -685,16 +685,16 @@
        "  document_id  query_id  label  \\\n",
        "0    00fmeepz         1      1   \n",
        "1    f047dvb4         1      0   \n",
-       "2    bc8taaw9         1      0   \n",
-       "3    12dcftwt         1      0   \n",
-       "4    kqqantwg         1      0   \n",
+       "2    is8tlxja         1      0   \n",
+       "3    db8j8wxx         1      0   \n",
+       "4    bc8taaw9         1      0   \n",
        "\n",
        "                                          title-full  \n",
        "0  Comprehensive overview of COVID-19 based on cu...  \n",
        "1  Retrouver les origines du SARS-CoV-2 dans les ...  \n",
-       "2  [Tracing the origins of SARS-COV-2 in coronavi...  \n",
-       "3  Possible Bat Origin of Severe Acute Respirator...  \n",
-       "4  Possible Bat Origin of Severe Acute Respirator...  "
+       "2  SARS-CoV-2: Zoonotic origin of pandemic corona...  \n",
+       "3  SARS-CoV-2: Zoonotic origin of pandemic corona...  \n",
+       "4  [Tracing the origins of SARS-COV-2 in coronavi...  "
       ]
      },
      "execution_count": 4,
@@ -704,6 +704,24 @@
    ],
    "source": [
     "training_data_batch.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chose model name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"google/bert_uncased_L-4_H-512_A-8\"\n",
+    "query_input_size=24\n",
+    "doc_input_size=64"
    ]
   },
   {
@@ -722,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,27 +833,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import BertTokenizerFast\n",
-    "tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')\n",
+    "tokenizer = BertTokenizerFast.from_pretrained(model_name)\n",
     "\n",
     "train_encodings = create_bert_encodings(\n",
     "    queries=train_queries, \n",
     "    docs=train_docs, \n",
     "    tokenizer=tokenizer, \n",
-    "    query_input_size=64, \n",
-    "    doc_input_size=64\n",
+    "    query_input_size=query_input_size, \n",
+    "    doc_input_size=doc_input_size\n",
     ")\n",
     "\n",
     "val_encodings = create_bert_encodings(\n",
     "    queries=val_queries, \n",
     "    docs=val_docs, \n",
     "    tokenizer=tokenizer, \n",
-    "    query_input_size=64, \n",
-    "    doc_input_size=64\n",
+    "    query_input_size=query_input_size, \n",
+    "    doc_input_size=doc_input_size\n",
     ")"
    ]
   },
@@ -848,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +900,104 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c850077b47eb437eac1d5c5781e8e2fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=116252865.0, style=ProgressStyle(descri…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at google/bert_uncased_L-4_H-512_A-8 were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.decoder.bias', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).\n",
+      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at google/bert_uncased_L-4_H-512_A-8 and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "babfbaa2950b48448bd21cf757a18932",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Epoch', max=3.0, style=ProgressStyle(description_width='i…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdacbaae901a42ff812a191f6a4d0ded",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Iteration', max=7145.0, style=ProgressStyle(description_w…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 0.8461690902709961, 'learning_rate': 1.0000000000000002e-06, 'epoch': 0.0013995801259622112, 'total_flos': 3534603141120, 'step': 10}\n",
+      "{'loss': 0.8681703567504883, 'learning_rate': 2.0000000000000003e-06, 'epoch': 0.0027991602519244225, 'total_flos': 7069206282240, 'step': 20}\n",
+      "{'loss': 0.857829475402832, 'learning_rate': 3e-06, 'epoch': 0.004198740377886634, 'total_flos': 10603809423360, 'step': 30}\n",
+      "{'loss': 0.8333715438842774, 'learning_rate': 4.000000000000001e-06, 'epoch': 0.005598320503848845, 'total_flos': 14138412564480, 'step': 40}\n",
+      "{'loss': 0.8387279510498047, 'learning_rate': 5e-06, 'epoch': 0.006997900629811057, 'total_flos': 17673015705600, 'step': 50}\n",
+      "{'loss': 0.8409191131591797, 'learning_rate': 6e-06, 'epoch': 0.008397480755773267, 'total_flos': 21207618846720, 'step': 60}\n",
+      "{'loss': 0.8141700744628906, 'learning_rate': 7.000000000000001e-06, 'epoch': 0.00979706088173548, 'total_flos': 24742221987840, 'step': 70}\n",
+      "{'loss': 0.7777870178222657, 'learning_rate': 8.000000000000001e-06, 'epoch': 0.01119664100769769, 'total_flos': 28276825128960, 'step': 80}\n",
+      "{'loss': 0.759039306640625, 'learning_rate': 9e-06, 'epoch': 0.012596221133659902, 'total_flos': 31811428270080, 'step': 90}\n",
+      "{'loss': 0.7358154296875, 'learning_rate': 1e-05, 'epoch': 0.013995801259622114, 'total_flos': 35346031411200, 'step': 100}\n",
+      "{'loss': 0.7224632263183594, 'learning_rate': 1.1000000000000001e-05, 'epoch': 0.015395381385584325, 'total_flos': 38880634552320, 'step': 110}\n",
+      "{'loss': 0.7000160217285156, 'learning_rate': 1.2e-05, 'epoch': 0.016794961511546535, 'total_flos': 42415237693440, 'step': 120}\n",
+      "{'loss': 0.6806869506835938, 'learning_rate': 1.3000000000000001e-05, 'epoch': 0.01819454163750875, 'total_flos': 45949840834560, 'step': 130}\n",
+      "{'loss': 0.6666877746582032, 'learning_rate': 1.4000000000000001e-05, 'epoch': 0.01959412176347096, 'total_flos': 49484443975680, 'step': 140}\n",
+      "{'loss': 0.6240447998046875, 'learning_rate': 1.5e-05, 'epoch': 0.02099370188943317, 'total_flos': 53019047116800, 'step': 150}\n",
+      "{'loss': 0.5942115783691406, 'learning_rate': 1.6000000000000003e-05, 'epoch': 0.02239328201539538, 'total_flos': 56553650257920, 'step': 160}\n",
+      "{'loss': 0.5723480224609375, 'learning_rate': 1.7000000000000003e-05, 'epoch': 0.023792862141357594, 'total_flos': 60088253399040, 'step': 170}\n",
+      "{'loss': 0.5292701721191406, 'learning_rate': 1.8e-05, 'epoch': 0.025192442267319804, 'total_flos': 63622856540160, 'step': 180}\n",
+      "{'loss': 0.5330642700195313, 'learning_rate': 1.9e-05, 'epoch': 0.026592022393282014, 'total_flos': 67157459681280, 'step': 190}\n",
+      "{'loss': 0.46725311279296877, 'learning_rate': 2e-05, 'epoch': 0.02799160251924423, 'total_flos': 70692062822400, 'step': 200}\n",
+      "{'loss': 0.442303466796875, 'learning_rate': 2.1e-05, 'epoch': 0.02939118264520644, 'total_flos': 74226665963520, 'step': 210}\n",
+      "{'loss': 0.4489776611328125, 'learning_rate': 2.2000000000000003e-05, 'epoch': 0.03079076277116865, 'total_flos': 77761269104640, 'step': 220}\n",
+      "{'loss': 0.411376953125, 'learning_rate': 2.3000000000000003e-05, 'epoch': 0.03219034289713086, 'total_flos': 81295872245760, 'step': 230}\n",
+      "{'loss': 0.35503387451171875, 'learning_rate': 2.4e-05, 'epoch': 0.03358992302309307, 'total_flos': 84830475386880, 'step': 240}\n",
+      "{'loss': 0.40528106689453125, 'learning_rate': 2.5e-05, 'epoch': 0.03498950314905528, 'total_flos': 88365078528000, 'step': 250}\n",
+      "{'loss': 0.32529296875, 'learning_rate': 2.6000000000000002e-05, 'epoch': 0.0363890832750175, 'total_flos': 91899681669120, 'step': 260}\n",
+      "{'loss': 0.3455596923828125, 'learning_rate': 2.7000000000000002e-05, 'epoch': 0.03778866340097971, 'total_flos': 95434284810240, 'step': 270}\n",
+      "{'loss': 0.3091766357421875, 'learning_rate': 2.8000000000000003e-05, 'epoch': 0.03918824352694192, 'total_flos': 98968887951360, 'step': 280}\n",
+      "{'loss': 0.27514801025390623, 'learning_rate': 2.9e-05, 'epoch': 0.04058782365290413, 'total_flos': 102503491092480, 'step': 290}\n",
+      "{'loss': 0.37311553955078125, 'learning_rate': 3e-05, 'epoch': 0.04198740377886634, 'total_flos': 106038094233600, 'step': 300}\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import BertForSequenceClassification, Trainer, TrainingArguments\n",
     "\n",
@@ -897,7 +1012,7 @@
     "    logging_steps=10,\n",
     ")\n",
     "\n",
-    "model = BertForSequenceClassification.from_pretrained('bert-base-uncased')\n",
+    "model = BertForSequenceClassification.from_pretrained(model_name)\n",
     "for param in model.base_model.parameters():\n",
     "    param.requires_grad = False\n",
     "\n",
@@ -920,14 +1035,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.onnx import export\n",
     "from pathlib import Path \n",
     "\n",
-    "model_onnx_path = Path(\"bert.onnx\")\n",
+    "model_onnx_path = Path(model_name + \".onnx\")\n",
     "dummy_input = (\n",
     "    train_dataset[0][\"input_ids\"].unsqueeze(0), \n",
     "    train_dataset[0][\"token_type_ids\"].unsqueeze(0), \n",
@@ -950,22 +1065,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "logits\n",
-      "tensor(float)\n",
-      "[1, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import onnxruntime as ort\n",
-    "m = ort.InferenceSession(\"bert.onnx\") \n",
+    "m = ort.InferenceSession(model_name + \".onnx\") \n",
     "print(m.get_outputs()[0].name)\n",
     "print(m.get_outputs()[0].type)\n",
     "print(m.get_outputs()[0].shape)"
@@ -980,37 +1085,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[name: \"logits\"\n",
-       "type {\n",
-       "  tensor_type {\n",
-       "    elem_type: 1\n",
-       "    shape {\n",
-       "      dim {\n",
-       "        dim_value: 1\n",
-       "      }\n",
-       "      dim {\n",
-       "        dim_value: 2\n",
-       "      }\n",
-       "    }\n",
-       "  }\n",
-       "}\n",
-       "]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import onnx                                                                                                                                                                          \n",
-    "m = onnx.load(\"bert.onnx\")                                                                                                                                                         \n",
+    "m = onnx.load(model_name + \".onnx\")                                                                                                                                                         \n",
     "m.graph.output"
    ]
   }
