update ndcg issue

--- a/docs/sphinx/source/use_cases/cord-19_debug_bert_clean.ipynb
+++ b/docs/sphinx/source/use_cases/cord-19_debug_bert_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -271,8 +271,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recall issue"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,24 +480,532 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "query_data = labelled_data[14]\n",
+    "\n",
+    "result_bm25 = app.query(query=query_data[\"query\"], query_model=query_models[\"or_bm25\"],\n",
+    "          hits = 10,\n",
+    "         )\n",
+    "result_bm25_bert = app.query(query=query_data[\"query\"], query_model=query_models[\"or_bm25_bert_index_1\"],\n",
+    "          hits = 10,\n",
+    "          timeout=\"100s\",\n",
+    "          **{\"ranking.features.query(query_token_ids)\": str(tokenizer(\n",
+    "                        str(query_data[\"query\"]), \n",
+    "                        truncation=True, \n",
+    "                        padding=\"max_length\",\n",
+    "                        max_length=64, \n",
+    "                        add_special_tokens=False\n",
+    "                    )[\"input_ids\"])}            \n",
+    "         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ecu579el']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bm25_bert_ids = [hit[\"fields\"][\"cord_uid\"] for hit in result_bm25_bert.hits] \n",
+    "bm25_ids = [hit[\"fields\"][\"cord_uid\"] for hit in result_bm25.hits]\n",
+    "id_in_bert_not_in_bm25 = [x for x in bm25_bert_ids if x not in bm25_ids]\n",
+    "id_in_bert_not_in_bm25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_bm25_11 = [hit[\"fields\"][\"cord_uid\"] for hit in app.query(query=query_data[\"query\"], query_model=query_models[\"or_bm25\"], hits = 11).hits] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['zpek8i5e',\n",
+       " '75u57fw1',\n",
+       " 'up5jpq45',\n",
+       " 'qmrntk43',\n",
+       " 'cxfzs68n',\n",
+       " 'y2nhss9u',\n",
+       " '94puwlbm',\n",
+       " 'zpmdrh4q',\n",
+       " 'fpexj3s5',\n",
+       " 'axljtddn',\n",
+       " 'ecu579el']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_bm25_11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Positive and null NDGC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['match_ratio', 'recall_10', 'reciprocal_rank_10', 'ndcg_10'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "metric_values.metric.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
+    "from pandas import merge\n",
     "\n",
+    "ndcg_measures = merge(\n",
+    "    left=evaluations[\"or_bm25\"], \n",
+    "    right=evaluations[\"or_bm25_bert_index_1\"],\n",
+    "    on=\"query_id\"\n",
+    ")[[\"query_id\", \"ndcg_10_value_x\", \"ndcg_10_value_y\"]]\n",
     "\n",
-    "fig = px.box(metric_values[metric_values.metric == \"reciprocal_rank_10\"], x=\"query_model\", y=\"value\", title = \"RR @ 10\")\n",
-    "fig.show()"
+    "#recall_measures[recall_measures.recall_10_value_x != recall_measures.recall_10_value_y]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>query_id</th>\n",
+       "      <th>ndcg_10_value_x</th>\n",
+       "      <th>ndcg_10_value_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.683159</td>\n",
+       "      <td>0.812003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.450853</td>\n",
+       "      <td>0.619669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.397809</td>\n",
+       "      <td>0.455605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0.678762</td>\n",
+       "      <td>0.901013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0.888733</td>\n",
+       "      <td>0.629200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.527845</td>\n",
+       "      <td>0.947807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>0.859413</td>\n",
+       "      <td>0.569139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.541696</td>\n",
+       "      <td>0.880740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.510384</td>\n",
+       "      <td>0.844481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.386853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.847790</td>\n",
+       "      <td>0.855857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0.882121</td>\n",
+       "      <td>0.859719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.588160</td>\n",
+       "      <td>0.792087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.674788</td>\n",
+       "      <td>0.907813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.758879</td>\n",
+       "      <td>0.652883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.695950</td>\n",
+       "      <td>0.421776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.769846</td>\n",
+       "      <td>0.991829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>0.581889</td>\n",
+       "      <td>0.651197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>0.301030</td>\n",
+       "      <td>0.430677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>0.735734</td>\n",
+       "      <td>0.686502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>0.963487</td>\n",
+       "      <td>0.857319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>0.570642</td>\n",
+       "      <td>0.650921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26</td>\n",
+       "      <td>0.918849</td>\n",
+       "      <td>0.868415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27</td>\n",
+       "      <td>0.533893</td>\n",
+       "      <td>0.493208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0.548702</td>\n",
+       "      <td>0.575719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>29</td>\n",
+       "      <td>0.966813</td>\n",
+       "      <td>0.907663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.811837</td>\n",
+       "      <td>0.804581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>31</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0.430677</td>\n",
+       "      <td>0.630930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>33</td>\n",
+       "      <td>0.707489</td>\n",
+       "      <td>0.426919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>34</td>\n",
+       "      <td>0.430677</td>\n",
+       "      <td>0.630930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>35</td>\n",
+       "      <td>0.489969</td>\n",
+       "      <td>0.906025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>36</td>\n",
+       "      <td>0.846117</td>\n",
+       "      <td>0.879854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>37</td>\n",
+       "      <td>0.950421</td>\n",
+       "      <td>0.950421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>38</td>\n",
+       "      <td>0.783761</td>\n",
+       "      <td>0.800132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>39</td>\n",
+       "      <td>0.976409</td>\n",
+       "      <td>0.710612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>40</td>\n",
+       "      <td>0.815931</td>\n",
+       "      <td>0.559814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0.806327</td>\n",
+       "      <td>0.970409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>42</td>\n",
+       "      <td>0.763499</td>\n",
+       "      <td>0.706410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>43</td>\n",
+       "      <td>0.926285</td>\n",
+       "      <td>0.702700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>44</td>\n",
+       "      <td>0.833223</td>\n",
+       "      <td>0.579375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>45</td>\n",
+       "      <td>0.804465</td>\n",
+       "      <td>0.710549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>46</td>\n",
+       "      <td>0.965444</td>\n",
+       "      <td>0.622067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>47</td>\n",
+       "      <td>0.796498</td>\n",
+       "      <td>0.717333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>48</td>\n",
+       "      <td>0.505179</td>\n",
+       "      <td>0.917655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>49</td>\n",
+       "      <td>0.531761</td>\n",
+       "      <td>0.864027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>50</td>\n",
+       "      <td>0.445734</td>\n",
+       "      <td>0.422790</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    query_id  ndcg_10_value_x  ndcg_10_value_y\n",
+       "0          1         0.683159         0.812003\n",
+       "1          2         0.000000         0.000000\n",
+       "2          3         0.450853         0.619669\n",
+       "3          4         0.000000         0.000000\n",
+       "4          5         0.397809         0.455605\n",
+       "5          6         0.678762         0.901013\n",
+       "6          7         0.888733         0.629200\n",
+       "7          8         0.527845         0.947807\n",
+       "8          9         0.859413         0.569139\n",
+       "9         10         0.541696         0.880740\n",
+       "10        11         0.000000         0.000000\n",
+       "11        12         0.510384         0.844481\n",
+       "12        13         0.500000         0.386853\n",
+       "13        14         0.847790         0.855857\n",
+       "14        15         0.882121         0.859719\n",
+       "15        16         0.588160         0.792087\n",
+       "16        17         0.674788         0.907813\n",
+       "17        18         0.758879         0.652883\n",
+       "18        19         0.695950         0.421776\n",
+       "19        20         0.769846         0.991829\n",
+       "20        21         0.581889         0.651197\n",
+       "21        22         0.301030         0.430677\n",
+       "22        23         0.735734         0.686502\n",
+       "23        24         0.963487         0.857319\n",
+       "24        25         0.570642         0.650921\n",
+       "25        26         0.918849         0.868415\n",
+       "26        27         0.533893         0.493208\n",
+       "27        28         0.548702         0.575719\n",
+       "28        29         0.966813         0.907663\n",
+       "29        30         0.811837         0.804581\n",
+       "30        31         0.000000         0.000000\n",
+       "31        32         0.430677         0.630930\n",
+       "32        33         0.707489         0.426919\n",
+       "33        34         0.430677         0.630930\n",
+       "34        35         0.489969         0.906025\n",
+       "35        36         0.846117         0.879854\n",
+       "36        37         0.950421         0.950421\n",
+       "37        38         0.783761         0.800132\n",
+       "38        39         0.976409         0.710612\n",
+       "39        40         0.815931         0.559814\n",
+       "40        41         0.806327         0.970409\n",
+       "41        42         0.763499         0.706410\n",
+       "42        43         0.926285         0.702700\n",
+       "43        44         0.833223         0.579375\n",
+       "44        45         0.804465         0.710549\n",
+       "45        46         0.965444         0.622067\n",
+       "46        47         0.796498         0.717333\n",
+       "47        48         0.505179         0.917655\n",
+       "48        49         0.531761         0.864027\n",
+       "49        50         0.445734         0.422790"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndcg_measures"
    ]
   }
  ],
