update text search

--- a/docs/sphinx/source/use_cases/text_search/basic-text-search-simplified-api.ipynb
+++ b/docs/sphinx/source/use_cases/text_search/basic-text-search-simplified-api.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,9 +195,9 @@
       "Waiting for configuration server.\n",
       "Waiting for configuration server.\n",
       "Waiting for configuration server.\n",
-      "Waiting for configuration server.\n",
-      "Waiting for configuration server.\n",
-      "Waiting for application status.\n"
+      "Waiting for application status.\n",
+      "Waiting for application status.\n",
+      "Finished deployment.\n"
      ]
     }
    ],
@@ -400,58 +400,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can then iterate through the `DataFrame` above and feed each row by using the [app.feed_data_point](https://pyvespa.readthedocs.io/en/latest/reference-api.html#vespa.application.Vespa.feed_data_point) method: \n",
-    "\n",
-    "* The schema name is by default set to be equal to the application name, which is `cord19` in this case.\n",
-    "\n",
-    "* When feeding data to Vespa, we must have a unique id for each data point. We will use `cord_uid` here."
+    "We can then iterate through the `DataFrame` above and feed using the [app.feed_batch](https://pyvespa.readthedocs.io/en/latest/reference-api.html#vespa.application.Vespa.feed_batch) method:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx, row in parsed_feed.iterrows():\n",
-    "    fields = {\n",
-    "        \"cord_uid\": str(row[\"cord_uid\"]),\n",
-    "        \"title\": str(row[\"title\"]),\n",
-    "        \"abstract\": str(row[\"abstract\"])\n",
-    "    }\n",
-    "    response = app.feed_data_point(\n",
-    "        schema = \"cord19\",\n",
-    "        data_id = str(row[\"cord_uid\"]),\n",
-    "        fields = fields,\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also inspect the response to each request if desired."
+    "batch = [\n",
+    "    {\n",
+    "        \"id\": str(row[\"cord_uid\"]), \n",
+    "        \"fields\": {\n",
+    "            \"cord_uid\": str(row[\"cord_uid\"]),\n",
+    "            \"title\": str(row[\"title\"]),\n",
+    "            \"abstract\": str(row[\"abstract\"])\n",
+    "        }\n",
+    "    } for idx, row in parsed_feed.iterrows()\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pathId': '/document/v1/cord19/cord19/docid/qbldmef1',\n",
-       " 'id': 'id:cord19:cord19::qbldmef1'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response.json"
+    "response = app.feed_batch(batch=batch)"
    ]
   },
   {
